# SAT-based-algorithms-for-inconsistency-measurement-LTL

./: README.md
src/: cegar.py  core.py  encoder.py  main.py  modules.txt  solver.py
src/tools/: README.md
src/tools/maxsat/EvalMaxSAT/: starexec_description.txt
src/tools/maxsat/EvalMaxSAT/code/: CMakeLists.txt  main.cpp
src/tools/maxsat/EvalMaxSAT/code/lib/EvalMaxSAT/: CMakeLists.txt
src/tools/maxsat/EvalMaxSAT/code/lib/EvalMaxSAT/src/: EvalMaxSAT.h
src/tools/maxsat/EvalMaxSAT/code/lib/MaLib/: CMakeLists.txt
src/tools/maxsat/EvalMaxSAT/code/lib/cadical/: CMakeLists.txt
src/tools/maxsat/MaxHS/code/: Makefile
src/tools/maxsat/MaxHS/code/cadical/src/: cadical.hpp  decompose.cpp  external.cpp  external.hpp  flags.cpp  flags.hpp  instantiate.cpp  internal.cpp  internal.hpp  limit.cpp  limit.hpp  observer.hpp  options.hpp  parse.cpp  phases.cpp  probe.cpp  profile.hpp  proof.hpp  propagate.cpp  report.cpp  restore.cpp  solution.cpp  solver.cpp  stats.hpp  subsume.cpp  version.cpp  vivify.cpp  walk.cpp
src/tools/maxsat/MaxHS/code/maxhs/core/: assumptions.cc  assumptions.h  bvars.cc  bvars.h  graph.cc  graph.h  lslnssolver.cc  lslnssolver.h  maxhs.cc  maxhslns.cc  maxsolver.cc  maxsolver.h  maxsolvertypes.h  sortnet.cc  sortnet.h  sumauxstruct.h  summanager.cc  summanager.h  wcnf.cc  wcnf.h
src/tools/maxsat/MaxHS/code/maxhs/ds/: onewatch.h  packed.h
src/tools/maxsat/MaxHS/code/maxhs/ifaces/: cadicalsatsolver.cc  cadicalsatsolver.h  cplex.cc  cplex.h  greedysolver.cc  greedysolver.h  muser.cc  muser.h  satsolver.cc  satsolver.h
src/tools/maxsat/MaxHS/code/maxhs/utils/: clause_utils.h  io.h  options.cc  options.h  params.cc  params.h  parse.h  typenames.h  zfstream.cc  zfstream.h
src/tools/maxsat/MaxHS/code/maxpre/src/: clause.cpp  log.cpp  preprocessor.cpp  preprocessorinterface.cpp  probleminstance.cpp
src/tools/maxsat/MaxHS/code/minisat/core/: SolverTypes.h
src/tools/maxsat/UWrMaxSat/: starexec_description.txt
src/tools/maxsat/UWrMaxSat/code/: starexec_build  uwrmaxsat-1.4-v2.patch
src/tools/maxsat/UWrMaxSat/code/cominisatps/core/: Solver.cc  Solver.h  Solver.or
src/tools/maxsat/UWrMaxSat/code/cominisatps/minisat/core/: Solver.cc  Solver.h  SolverTypes.h
src/tools/maxsat/UWrMaxSat/code/cominisatps/mtl/: Vec.h
src/tools/maxsat/UWrMaxSat/code/cominisatps/simp/: Main.or  SimpSolver.cc  SimpSolver.or
src/tools/maxsat/UWrMaxSat/code/cominisatps/utils/: Options.or  System.or
src/tools/maxsat/UWrMaxSat/code/uwrmaxsat/: config.mk
src/tools/maxsat/pacose/: starexec_description.txt
src/tools/maxsat/pacose/code/: CMakeLists.txt  Main.cpp  MaxSATDimacs.h  readme.txt
src/tools/maxsat/pacose/code/maxSAT/: Encodings.cpp  Encodings.h  Greedyprepro.cpp  Greedyprepro.h  Pacose.cpp  Pacose.h  Settings.h  Softclause.h
src/tools/maxsat/pacose/code/maxSAT/DGPW/: bucket.cpp  bucket.h  cascade.cpp  cascade.h  dgpw.cpp  dgpw.h  multiplecascade.cpp  multiplecascade.h  softclausenodes.h  sorter.cpp  sorter.h  timemeasurement.h  timevariables.h  totalizerencodetree.h
src/tools/maxsat/pacose/code/solver-proxy/: AntomSolverProxy.cpp  AntomSolverProxy.h  CMakeLists.txt  CadicalSolverProxy.cpp  CadicalSolverProxy.h  CryptoMiniSat565SolverProxy.cpp  CryptoMiniSat565SolverProxy.h  Glucose3SolverProxy.cpp  Glucose3SolverProxy.h  Glucose421SolverProxy.cpp  Glucose421SolverProxy.h  Main.cpp  MapleGlucoseSolverProxy.cpp  MapleGlucoseSolverProxy.h  SATSolverProxy.cpp  SATSolverProxy.h  Timer.h
src/tools/maxsat/pacose/code/solver-proxy/antom/: antom.h  antombase.h  libantomNDEBUG.ax
src/tools/maxsat/pacose/code/solver-proxy/cryptoMiniSat565/cryptominisat5/: cryptominisat.h
src/tools/maxsat/pacose/code/solver-proxy/glucose3/core/: BoundedQueue.h  Solver.h  SolverTypes.h
src/tools/maxsat/pacose/code/solver-proxy/glucose3/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h
src/tools/maxsat/pacose/code/solver-proxy/glucose3/simp/: SimpSolver.h
src/tools/maxsat/pacose/code/solver-proxy/glucose3/utils/: Options.h  System.h
src/tools/maxsat/pacose/code/solver-proxy/glucose421/: libGlucose421.a.old
src/tools/maxsat/pacose/code/solver-proxy/glucose421/core/: Solver.h  SolverStats.h
src/tools/maxsat/pacose/code/solver-proxy/glucose421/mtl/: Alloc.h  Heap.h  Map.h  Vec.h
src/tools/maxsat/pacose/code/solver-proxy/glucose421/utils/: Options.h
src/tools/maxsat/pacose/code/solver-proxy/mapleLCMDistChronoBT/: libMapleGlucose.ax
src/tools/maxsat/pacose/code/solver-proxy/mapleLCMDistChronoBT/core/: Solver.h  SolverTypes.h
src/tools/maxsat/pacose/code/solver-proxy/mapleLCMDistChronoBT/mtl/: Heap.h
src/tools/mcscache/: README.txt  mcscache
src/tools/umuser/: README.txt  ex.cnf  mcscacheUMU  umuser  umuser-star.py
